@@ -8,3 +8,4 @@
 - Eliminación de la configuración de temas así como su uso.
 - Se elimina la configuración de Mapbox y su uso.
 - Actualización y eliminación de librerías del fichero package.json
+- Eliminación de la configuración de TEMPLATES_PATH y métodos getTemplateUrl, get y compile.
